//使用 proto3 语法 ,未指定则使用proto2
syntax = "proto3";

//生成 proto 文件所在包路径
package com.lzb.www.proto;

//生成 proto 文件所在包路径
option java_package = "com.lzb.www.proto";

//生成 proto 文件名
option java_outer_classname = "InvokeDataProto";
message InvokeData{
  string id = 1;
  string interfaceName = 2;
  string methodName = 3;
  bytes rpcRequestByteArray = 4;
}

